gitops/platform/control-api/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-postgres

  annotations:
    argocd.argoproj.io/sync-wave: "-3"

spec:
  clusterIP: None

  selector:
    app: platform-postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
