gitops/platform/control-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-api

spec:
  type: ClusterIP

  selector:
    app: platform-api

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
